--- a/Portofolio/portofolio.css
+++ b/Portofolio/portofolio.css
@@ -63,6 +63,7 @@ body {
     z-index: 1;
     position: fixed;    
     top: 0;
+    box-shadow: 0.3rem 0.3rem 2rem 0.9rem rgba(0,0,0,1);
 }
 
 .nav-bar {
